<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondologinpage"
    tools:context=".fragments.LoginPage">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="@font/jua"
        android:text="@string/logueate"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.161"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="104dp"
        android:fontFamily="@font/jua"
        android:text="@string/transfe"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.086"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="253dp"
        android:layout_marginBottom="396dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="30dp"
            android:fontFamily="@font/jua"
            android:text="Email"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/email"
            style="@style/Widget.Material3.AutoCompleteTextView.OutlinedBox"
            android:layout_width="342dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/edit_text_border"
            android:ems="10"
            android:fontFamily="@font/jua"
            android:hint="@string/ingresaEmail"
            android:inputType="text"
            android:textAlignment="gravity" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="44dp"
            android:layout_marginEnd="30dp"
            android:fontFamily="@font/jua"
            android:text="Contraseña"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColorHint="@color/material_dynamic_neutral70"
            app:endIconMode="password_toggle"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="342dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/edit_text_border"
                android:fontFamily="@font/jua"
                android:hint="Ingrese su contraseña"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/olvidarContraseña"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginEnd="35dp"
                android:layout_weight="1"
                android:fontFamily="@font/jua"
                android:gravity="right"
                android:text="@string/olvidar"
                android:textColor="#1A87DD"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="295dp"
        android:layout_height="48dp"
        android:layout_marginStart="83dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="83dp"
        android:backgroundTint="@color/principal"
        android:fontFamily="@font/jua"
        android:text="@string/login"
        app:cornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="83dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="83dp"
        android:fontFamily="@font/jua"
        android:text="@string/unaNueva"
        android:textColor="@color/principal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonLogin" />

</androidx.constraintlayout.widget.ConstraintLayout>